--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Study Tool",
-  "version": "1.3",
-  "description": " 'Helps' you study by providing stimulating youtube videos",
+  "version": "1.5",
+  "description": "Helps you study by providing stimulating youtube videos",
+  "permissions": ["activeTab"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -17,12 +18,8 @@
       "run_at": "document_idle"
     }
   ],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{f857892a-0135-414d-8325-8fac80cf94d2}"
-    }
-  },
   "icons": {
     "48": "icon.ico"
-  }
+  },
+  "host_permissions": ["https://www.youtube.com/*"]
 }
